# forge-plugin-manager

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: plugin-install-paths.md
docs/superpowers/plans/: 2026-03-19-multi-space-cowork.md
docs/superpowers/specs/: 2026-03-19-multi-space-cowork-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  cowork.rs  error.rs  lib.rs  machine.rs  main.rs  storage.rs
src/components/: Sidebar.tsx
src/lib/: api.ts
src/pages/: Activation.tsx  Catalog.tsx  Feedback.tsx  Installed.tsx  Settings.tsx
