[package]
name = "forge-plugin-manager"
version = "0.3.0"
description = "Tauri-based plugin manager for Claude Cowork"
authors = ["Reumbra"]
edition = "2021"

[lib]
name = "forge_plugin_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
zip = "2"
dirs = "6"
sha2 = "0.10"
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
